z-index issue with player markers fixed

--- a/static/less/snl.less
+++ b/static/less/snl.less
@@ -28,8 +28,9 @@ body{
     position: absolute;
     height: 100%;
     width: 100%;
-    z-index: 599;
+    z-index: 499;
 }
+
 .snl-holder{
     position: absolute;
     /*
@@ -41,17 +42,19 @@ body{
     height: calc(100vh - 80px) !important;*/
     height: 100%;
     width: 100%;
-    z-index: 498;
-
     img {
         width: 100%;
         height: 100%;
+
     }
 
     >svg {
         width: 100% !important;
         height: 100% !important;
     }
+}
+#id-snl-dice-holder{
+    z-index: 500;
 }
 /*
 #id-snl-player-1 > a{
